# pm1970_xarray

./: .gitignore  Dockerfile  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-test-and-push.yml  test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
pm1970_xarray/: artifical_data.py  aux.py  slab_model.py  somemod.py
tests/: test_artificial_data.py  test_aux.py  test_slab_model.py  test_somemod.py
